--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = -v -s --alluredir=allure-results --clean-alluredir
+addopts = -v -s --alluredir=allure-results --clean-alluredir --mobile
 testpaths = tests
